--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>test</title>
+    <style>
+        :root {
+            --font-size: 14px;
+            --button-height: 30px;
+            --border-radius: 4px;
+            --border-color: #333;
+            --button-bg: #999;
+            /*--border-color-hover: '';*/
+            /*--border-color-active: '';*/
+        }
+    </style>
 </head>
 <body>
 
     <div id="app">
-        <y-button></y-button>
+        <y-button icon="setting">按钮</y-button>
     </div>
     <script src="src/app.js"></script>
+    <script src="//at.alicdn.com/t/font_936378_ilur250uv8d.js"></script>
 </body>
 </html>
