--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <style>
         :root {
             --font-size: 14px;
+            --color: #333;
             --button-height: 30px;
             --border-radius: 4px;
-            --border-color: #333;
-            --button-bg: #999;
-            /*--border-color-hover: '';*/
-            /*--border-color-active: '';*/
+            --border-color: #999;
+            --border-color-hover: #666;
+            --button-bg: white;
+            --button-active-bg: #eee;
+        }
+        body{
+            font-size: var(--font-size);
         }
     </style>
 </head>
