--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <y-button icon="setting" icon-position="right">右边</y-button>
         <y-button icon="download">下载</y-button>
         <y-button :loading="true">加载中</y-button>
+        <p>
+            <y-button-group>
+                <y-button icon="left">上一页</y-button>
+                <y-button>中间</y-button>
+                <y-button icon="right" icon-position="right">下一页</y-button>
+            </y-button-group>
+        </p>
+
     </div>
     <script src="src/app.js"></script>
     <script src="//at.alicdn.com/t/font_936378_zjufxfrib7e.js"></script>
