--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
                 <y-button icon="right" icon-position="right">下一页</y-button>
             </y-button-group>
         </p>
-
+        <p>
+            <y-input></y-input>
+            <y-input readonly></y-input>
+            <y-input disabled></y-input>
+            <y-input error="用户名不能少于6个字"></y-input>
+        </p>
     </div>
     <script src="src/app.js"></script>
-    <script src="//at.alicdn.com/t/font_936378_o9xijr5lm4s.js"></script>
+    <script src="//at.alicdn.com/t/font_936378_wymsm87uqni.js"></script>
 </body>
 </html>
