--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>test</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+        *::before,
+        *::after{
+            box-sizing: border-box;
+        }
         :root {
             --font-size: 14px;
             --color: #333;
@@ -49,6 +56,24 @@
             {{message}}
             <button @click="message+=1">+1</button>
         </p>
+        <div>
+            <y-row>
+                <y-col span="10">1</y-col>
+                <y-col span="4">2</y-col>
+                <y-col span="10">3</y-col>
+            </y-row>
+            <y-row>
+                <y-col span="2">1</y-col>
+                <y-col span="4">2</y-col>
+                <y-col span="18">3</y-col>
+            </y-row>
+            <y-row>
+                <y-col span="2">1</y-col>
+                <y-col span="4">2</y-col>
+                <y-col span="9">3</y-col>
+                <y-col span="9">4</y-col>
+            </y-row>
+        </div>
     </div>
     <script src="src/app.js"></script>
     <script src="//at.alicdn.com/t/font_936378_wymsm87uqni.js"></script>
