--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                 <y-col span="9">3</y-col>
                 <y-col span="9">4</y-col>
             </y-row>
+            <y-row>
+                <y-col span="2">1</y-col>
+                <y-col span="4">2</y-col>
+                <y-col span="9" offset="9">3</y-col>
+            </y-row>
         </div>
     </div>
     <script src="src/app.js"></script>
