--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         body{
             font-size: var(--font-size);
         }
+        .column{
+            border: 1px solid green;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -58,25 +62,31 @@
         </p>
         <div>
             <y-row>
-                <y-col span="10">1</y-col>
-                <y-col span="4">2</y-col>
-                <y-col span="10">3</y-col>
+                <y-col span="10"><div class="column">1</div></y-col>
+                <y-col span="4"><div class="column">2</div></y-col>
+                <y-col span="10"><div class="column">3</div></y-col>
             </y-row>
             <y-row>
-                <y-col span="2">1</y-col>
-                <y-col span="4">2</y-col>
-                <y-col span="18">3</y-col>
+                <y-col span="2"><div class="column"></div>1</y-col>
+                <y-col span="4"><div class="column">2</div></y-col>
+                <y-col span="18"><div class="column">3</div></y-col>
             </y-row>
             <y-row>
-                <y-col span="2">1</y-col>
-                <y-col span="4">2</y-col>
-                <y-col span="9">3</y-col>
-                <y-col span="9">4</y-col>
+                <y-col span="2"><div class="column">1</div></y-col>
+                <y-col span="4"><div class="column">2</div></y-col>
+                <y-col span="9"><div class="column">3</div></y-col>
+                <y-col span="9"><div class="column">4</div></y-col>
             </y-row>
             <y-row>
-                <y-col span="2">1</y-col>
-                <y-col span="4">2</y-col>
-                <y-col span="9" offset="9">3</y-col>
+                <y-col span="2"><div class="column">1</div></y-col>
+                <y-col span="4"><div class="column">2</div></y-col>
+                <y-col span="9" offset="9"><div class="column">3</div></y-col>
+            </y-row>
+            <y-row gutter="10">
+                <y-col span="2"><div class="column">1</div></y-col>
+                <y-col span="4"><div class="column">2</div></y-col>
+                <y-col span="9"><div class="column">3</div></y-col>
+                <y-col span="9"><div class="column">4 </div></y-col>
             </y-row>
         </div>
     </div>
