代码优化，使用computed 让代码看着更舒服

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <y-col span="10"><div class="column">3</div></y-col>
             </y-row>
             <y-row>
-                <y-col span="2"><div class="column"></div>1</y-col>
+                <y-col span="2"><div class="column">1</div></y-col>
                 <y-col span="4"><div class="column">2</div></y-col>
                 <y-col span="18"><div class="column">3</div></y-col>
             </y-row>
