在row上面增加align属性

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             border: 1px solid green;
             width: 100%;
         }
+        .g-row1 {
+            height: 30px;
+            background: gray;
+        }
     </style>
 </head>
 <body>
@@ -87,6 +91,29 @@
                 <y-col span="4"><div class="column">2</div></y-col>
                 <y-col span="9"><div class="column">3</div></y-col>
                 <y-col span="9"><div class="column">4 </div></y-col>
+            </y-row>
+        </div>
+        <div>
+            <y-row class="g-row1">
+                <y-col span="9">
+                    <y-row align="left">
+                        <y-col>1</y-col>
+                        <y-col>2</y-col>
+                        <y-col>3</y-col>
+                        <y-col>4</y-col>
+                    </y-row>
+                </y-col>
+                <y-col span="15">
+                    <y-row align="right">
+                        <y-col>1</y-col>
+                        <y-col>2</y-col>
+                        <y-col>3</y-col>
+                        <y-col>4</y-col>
+                        <y-col>5</y-col>
+                        <y-col>6</y-col>
+                        <y-col>7</y-col>
+                    </y-row>
+                </y-col>
             </y-row>
         </div>
     </div>
