把row的align修改成计算属性

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     <div id="app">
         <y-row>
-            <y-col span="24" :phone="{span:12}" :narrow-pc="{span:6}" :pc="{span:4}" :wide-pc="{span:2}">
+            <y-col span="24" :narrow-pc="{span:6}" :pc="{span:4}" :wide-pc="{span:2}">
                 <div class="column">1</div>
             </y-col>
-            <y-col span="24" :phone="{span:12}" :narrow-pc="{span:18}" :pc="{span:20}" :wide-pc="{span:22}">
+            <y-col span="24" :narrow-pc="{span:18}" :pc="{span:20}" :wide-pc="{span:22}">
                 <div class="column">2</div>
             </y-col>
         </y-row>
