完成静态的样式

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <y-tab-item>美女</y-tab-item>
             <y-tab-item>帅哥</y-tab-item>
             <y-tab-item>其他</y-tab-item>
+            <button slot="button">操作</button>
         </y-tab-nav>
        <y-tab-content>
            <y-tab-panel>this is 美女</y-tab-panel>
