--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         body {
             margin: 0;
             font-size: var(--font-size);
+            margin: 50px;
         }
 
         .column {
@@ -54,20 +55,11 @@
 <body>
 
 <div id="app">
-    {{selectedTab}}
-    <y-tab :selected.sync="selectedTab">
-        <y-tab-nav>
-            <y-tab-item name="sports">体育</y-tab-item>
-            <y-tab-item name="financial">金融</y-tab-item>
-            <y-tab-item name="other">其他</y-tab-item>
-            <button slot="button">操作</button>
-        </y-tab-nav>
-       <y-tab-content>
-           <y-tab-panel name="sports">this is 体育板块</y-tab-panel>
-           <y-tab-panel name="financial">this is 金融板块</y-tab-panel>
-           <y-tab-panel name="other">this is 其他板块</y-tab-panel>
-       </y-tab-content>
-    </y-tab>
+    <y-collapse>
+        <y-collapse-item title="标题1">内容1</y-collapse-item>
+        <y-collapse-item title="标题2">内容2</y-collapse-item>
+        <y-collapse-item title="标题3">内容3</y-collapse-item>
+    </y-collapse>
 </div>
 <script src="src/app.js"></script>
 <script src="//at.alicdn.com/t/font_936378_wymsm87uqni.js"></script>
