--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
 
 <div id="app">
-    <y-collapse :selected="selectedItem">
+    <y-collapse :selected="selectedItems" single>
         <y-collapse-item title="标题1" name="1">内容1</y-collapse-item>
         <y-collapse-item title="标题2" name="2">内容2</y-collapse-item>
         <y-collapse-item title="标题3" name="3">内容3</y-collapse-item>
