--- a/index.html
+++ b/index.html
@@ -55,12 +55,7 @@
 <body>
 
 <div id="app">
-    {{selectedItems}}
-    <y-collapse :selected.sync="selectedItems" single>
-        <y-collapse-item title="标题1" name="1">内容1</y-collapse-item>
-        <y-collapse-item title="标题2" name="2">内容2</y-collapse-item>
-        <y-collapse-item title="标题3" name="3">内容3</y-collapse-item>
-    </y-collapse>
+    <y-toast>更新成功</y-toast>
 </div>
 <script src="src/app.js"></script>
 <script src="//at.alicdn.com/t/font_936378_wymsm87uqni.js"></script>
