在vue实例上添加$toast的实例方法

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
 
 <div id="app">
-    <y-toast>更新成功</y-toast>
+    <button @click="showToast">click me</button>
 </div>
 <script src="src/app.js"></script>
 <script src="//at.alicdn.com/t/font_936378_wymsm87uqni.js"></script>
