--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 <body>
 
 <div id="app">
-    <button @click="showToast">click me</button>
+    <button @click="showToastUp">在上面</button>
+    <button @click="showToastMiddle">在中间</button>
+    <button @click="showToastBottom">在下面</button>
 </div>
 <script src="src/app.js"></script>
 <script src="//at.alicdn.com/t/font_936378_wymsm87uqni.js"></script>
