--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <div slot="content">this is content</div>
         <span>click me</span>
     </y-popover>
+     <y-popover>
+        <div slot="content">this is content</div>
+        <span>click me</span>
+    </y-popover>
 </div>
 <script src="src/app.js"></script>
 <script src="//at.alicdn.com/t/font_936378_wymsm87uqni.js"></script>
